correct timeline scss margin on mobile

--- a/assets/css/_timeline.scss
+++ b/assets/css/_timeline.scss
@@ -13,7 +13,10 @@
     top: 15px;
     left: 0;
     right: 0;
-    
+    @media only screen and (max-width: 767px) {
+      margin: 0;
+      left: 7px;
+    }
   }
   .timeline {
     margin-bottom: 40px;
